--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <ul>
-        <li>aaaa</li>
-        <li>aaaa</li>
-        <li>aaa</li>
-        <li>aaaaaaaaaa</li>
+        <li>Python</li>
+        <li>html</li>
+        <li>css</li>
+        <li>PHP</li>
     </ul>
 </body>
 </html>
